--- a/index.html
+++ b/index.html
@@ -2,62 +2,100 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>ChatLab 💬</title>
+<title>ChatLab</title>
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 <style>
+* {
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 body {
-  background:#0e0e1a;
-  color:white;
-  font-family:Arial, sans-serif;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  height:100vh;
+  margin: 0;
+  background: #0b141a;
+  color: #e9edef;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
-#chat {
-  width:380px;
-  background:#1b1b3a;
-  padding:12px;
-  border-radius:12px;
-  box-shadow:0 0 20px #000;
+/* HEADER */
+header {
+  background: #202c33;
+  padding: 12px;
+  font-weight: bold;
+  border-bottom: 1px solid #2a3942;
 }
 
+/* CHAT */
 #messages {
-  height:260px;
-  overflow-y:auto;
-  margin:10px 0;
+  flex: 1;
+  padding: 12px;
+  overflow-y: auto;
+  background: #0b141a;
 }
 
-.msg { margin:5px 0; }
-.user { color:#6cf; font-weight:bold; }
-
-input, button {
-  width:100%;
-  padding:8px;
-  margin-top:5px;
-  border:none;
-  border-radius:6px;
+/* MESSAGE BUBBLE */
+.msg {
+  max-width: 75%;
+  margin-bottom: 10px;
+  background: #202c33;
+  padding: 8px 10px;
+  border-radius: 8px;
 }
 
-button {
-  background:#6cf;
-  cursor:pointer;
+.user {
+  font-size: 12px;
+  color: #53bdeb;
+  margin-bottom: 2px;
+}
+
+.text {
+  font-size: 14px;
+  word-wrap: break-word;
+}
+
+/* INPUT AREA */
+footer {
+  display: flex;
+  padding: 10px;
+  background: #202c33;
+  border-top: 1px solid #2a3942;
+}
+
+footer input {
+  flex: 1;
+  background: #2a3942;
+  border: none;
+  color: white;
+  padding: 10px;
+  border-radius: 6px;
+  margin-right: 8px;
+}
+
+footer button {
+  background: #00a884;
+  border: none;
+  padding: 10px 16px;
+  border-radius: 6px;
+  color: white;
+  cursor: pointer;
 }
 </style>
 </head>
 <body>
 
-<div id="chat">
-  <h2>ChatLab 💬</h2>
+<header>ChatLab</header>
 
-  <input id="name" placeholder="Seu nome">
-  <div id="messages"></div>
-  <input id="msg" placeholder="Digite sua mensagem">
+<div id="messages"></div>
+
+<footer>
+  <input id="name" placeholder="Seu nome" style="max-width:140px">
+  <input id="msg" placeholder="Mensagem">
   <button onclick="send()">Enviar</button>
-</div>
+</footer>
 
 <script>
 const supabase = supabase.createClient(
@@ -65,20 +103,23 @@ const supabase = supabase.createClient(
   "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImNjZ3dhbWhndG53emlwbnZha3NnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY4NzU1NTAsImV4cCI6MjA4MjQ1MTU1MH0.RLo9m4YuJBl6ZTqR0tTZRy_-8psBJesvCBv2DUr_wJE"
 );
 
-const messagesDiv = document.getElementById("messages");
+const messages = document.getElementById("messages");
 
 function addMessage(user, text) {
   const div = document.createElement("div");
   div.className = "msg";
-  div.innerHTML = `<span class="user">${user}:</span> ${text}`;
-  messagesDiv.appendChild(div);
-  messagesDiv.scrollTop = messagesDiv.scrollHeight;
+  div.innerHTML = `
+    <div class="user">${user}</div>
+    <div class="text">${text}</div>
+  `;
+  messages.appendChild(div);
+  messages.scrollTop = messages.scrollHeight;
 }
 
 async function send() {
   const name = document.getElementById("name").value.trim();
   const msg  = document.getElementById("msg").value.trim();
-  if(!name || !msg) return;
+  if (!name || !msg) return;
 
   await supabase.from("messages").insert({
     user_name: name,
@@ -88,9 +129,8 @@ async function send() {
   document.getElementById("msg").value = "";
 }
 
-// realtime listener
 supabase
-  .channel("chatlab-realtime")
+  .channel("chatlab")
   .on(
     "postgres_changes",
     { event: "INSERT", schema: "public", table: "messages" },
